--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -18,8 +18,8 @@
 
   </div>
 
-  <div class="container-fluid about_us">
-    <p class="about-us-title"> What We Stand For </p>
+  <div class="container-fluid about_us mobile-margin-top-50">
+    <p class="text-banner width-40 mobile-width-80 stylized-black text-left margin-left-2"> What We Stand For </p>
 
       <%- include("./../layout/about.ejs")  %>
       <div class="our_work_section">
