--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -30,7 +30,7 @@
     </div>
 
     <div class="contact_section padding-5 relative padding-5 height-300">
-        <p class="about-us-title contact_us_title"> Contact Us Today!</p>
+        <p class="about-us-title text-banner font-60 width-45 padding-1 stylized-black margin-bottom-5 white padding-left-2_5 contact_us_title mobile-font-35 mobile-width-100"> Contact Us Today!</p>
         <div class="blueboxcontact"></div>
     </div>
     <div class="contact_info_section white-background width-100 background-white relative width-100">
