--- a/views/layout/top_clients.ejs
+++ b/views/layout/top_clients.ejs
@@ -1,5 +1,5 @@
 <div id="our_clients">
-  <p class="text-banner our_work_title font-50 margin-top-10 float-right margin-right-5 padding-right-5 text-center width-25">Our Top Clients </p>
+  <p class="text-banner our_work_title font-50 margin-top-10 float-right margin-right-5 padding-right-5 text-center width-25 mobile-width-60 mobile-float-left">Our Top Clients </p>
 <div class="our_work_grid">
   <img src = "./assets/bkb.png" class="work_grid_item_left work_grid_item"/>
   <img src = "./assets/f45.png" class="work_grid_item_center work_grid_item"/>
