--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -1,13 +1,13 @@
 
-    <div class="showboxcontact">
-        <div class="blueboxcontact2"></div>
-        <div class="blueboxcontact2 lb"></div>
-        <div class="supportbox">
-            <img class="showimg" src = "./assets/show.png" style="height:100%"/>
-            <p class="titleshow text-center width-100">Get Quoted Today!</p>
-            <p class="titleshow2 text-center width-100"style="text-align:center">We will reach back as fast as possible!</p>
-            <div class="quotebutton width-100">
-                <p style="color:white;text-align:center;padding-top:2.5%;font-size:25px">Recieve a Free Quote!</p>
+    <div class="showboxcontact relative margin-top-10 width-100 padding-bottom-20">
+        <div class="blueboxcontact2 absolute background-006 width-20 z-3"></div>
+        <div class="blueboxcontact2 right-20 background-005"></div>
+        <div class="supportbox absolute width-80 z-5 background-c7">
+            <img class="showimg height-100 width-100 margin-top-30 z-4" src = "./assets/show.png"/>
+            <p class="titleshow text-center width-100 white akrobat font-60 text-center absolute z-9 ">Get Quoted Today!</p>
+            <p class="titleshow2 text-center width-100 white akrobat font-20 text-center absolute z-9">We will reach back as fast as possible!</p>
+            <div class="quotebutton width-100 heavy-shadow no-outline font-30 padding-1 absolute akrobat text-center white black-background width-30">
+                <p class="white text-center padding-top-2_5 font-25" >Recieve a Free Quote!</p>
             </div>
 
         </div>
