--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -18,24 +18,24 @@
 
   </div>
 
-  <div class="container-fluid about_us mobile-margin-top-50">
+  <div class="container-fluid about_us">
     <p class="text-banner width-40 mobile-width-80 stylized-black text-left margin-left-2"> What We Stand For </p>
 
       <%- include("./../layout/about.ejs")  %>
-      <div class="our_work_section">
-          <div class="wavy_section">
-              <div class = "wave"></div>
+      <div class="our_work_section background-white relative">
+          <div class="wavy_section width-100">
+              <div class = "wave relative width-100 background-006 max-z"></div>
         </div>
       <%- include("./../layout/top_clients.ejs") %>
     </div>
 
-    <div class="contact_section padding-5 relative padding-5 height-300">
+    <div class="contact_section padding-5 relative padding-5 height-300 width-100">
         <p class="about-us-title text-banner font-60 width-45 padding-1 stylized-black margin-bottom-5 white padding-left-2_5 contact_us_title mobile-font-35 mobile-width-100 mobile-text-center "> Contact Us Today!</p>
-        <div class="blueboxcontact"></div>
+        <div class="blueboxcontact negative-z background-005 width-30 absolute"></div>
     </div>
-    <div class="contact_info_section white-background width-100 background-white relative width-100">
-      <p class="before_after_title bkc bkq"style="color:white;font-family: 'Akrobat';text-align:left;font-size:40px;font-weight:bold;width:40%;padding:1%;padding-left:5%;background:#00103d">489-939-9393 </p>
-      <p class="before_after_title bkc "style="color:white;font-family: 'Akrobat';text-align:left;font-size:40px;font-weight:bold;width:90%;padding:1%;padding-left:5%;background:#00103d">info@customfacilityservices.com </p>
+    <div class="contact_info_section padding-top-3-rem color-01 line-height-1_5 white-background width-100 background-white relative width-100">
+      <p class="text-banner width-50 mobile-width-80 text-left mobile-font-25">489-939-9393 </p>
+      <p class="text-banner text-left width-80 mobile-width-80 mobile-font-25">info@customfacilityservices.com </p>
         <%- include("./../layout/contact.ejs") %>
     </div>
 </div>
