--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,45 +1,6 @@
 
-/* .intro{
-  margin-top:10% !important;
-} */
-.contact_info{
-  z-index:102;
-  position: relative;
-}
-
-.what_we_do_image{
-  height:700px;
-  width:100%;
-}
 .about_us{
-  margin-top:-70%;
-}
-
-@keyframes move_text_left{
-  0%{
-    left: -1000px;
-  }
-  100%{
-    left:0px;
-  }
-}
-
-.nav_list{
-  list-style-type: none;
-  color:white;
-}
-
-/* .intro-image{
-  width:100%;
-  position:absolute;
-  top:0%;
-  right:0%;
-} */
-/* .babybluebackg{
-  background:#00b1ff;
-} */
-.navbar_custom{
-background:  #0c0300;
+  margin-top:5%;
 }
 
 .form-title{
@@ -48,39 +9,18 @@ background:  #0c0300;
   font-family: monospace;
   text-align: center;
 }
+
 .intro-form-container{
     background:white;
     padding:5%;
     margin-left:5%;
 }
+
 .form-subtitle{
   font-size: 14px;
   width:100%;
   font-family: monospace;
   text-align: center;
-}
-
-/* .intro-row{
-  z-index:4;
-  margin-left: 5%;
-  position: relative;
-  padding:5%;
-} */
-.navbar_home{
-
-  width:100%;
-}
-.link_nav{
-  color:white;
-  font-family: "Roboto";
-  font-size: 18px;
-}
-.link_nav:hover{
-  font-weight: bold;
-}
-
-.contact_section{
-  width:100%;
 }
 
 .about_image{
@@ -93,31 +33,22 @@ background:  #0c0300;
   height:800px;
 }
 
-
 .big_blue_box_about_2{
   top:85%;
   left:-5%;
   height:200px;
 }
 
-.wavy_section{
-  width:100%;
-
-
-}
 .wave{
-  position:relative;
-  width:100%;
   height:300px;
-  background:#0069a4;
-  z-index:999;
+}
 
+.background-006{
+  background:#0069a4;
 }
 
 .our_work_section{
-  background:white;
   width:105%;
-  position: relative;
   right:50px;
 }
 
@@ -132,265 +63,110 @@ background:  #0c0300;
   background:url("./../wave.png");
   background-repeat:no-repeat;
 }
-.cover-background{
-  background-size:cover;
-}
+
 .work_grid_item_left{
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
- grid-row-end: 3;
+  grid-row-end: 3;
 }
 .work_grid_item_center{
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 1;
- grid-row-end: 3;
+  grid-row-end: 3;
 }
 .work_grid_item_right{
   grid-column-start: 5;
   grid-column-end: 6;
   grid-row-start: 1;
- grid-row-end: 3;
+  grid-row-end: 3;
 }
 .work_grid_item_righter{
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 3;
- grid-row-end: 5;
+  grid-row-end: 5;
 }
 
 .work_grid_item_rightest{
-    grid-area: rightest;
+  grid-area: rightest;
 }
-.our_work_grid{
-  display: grid;
-  padding:2.5%;
-
-
-}
-
-.work_grid_item{
-  width:100%;
-
-}
-.container-fluid{
-  padding:0%;
-}
-
 
 .blueboxcontact{
-  background:#005793;
-  width:30%;
-  position: absolute;
   top:0%;
   left:-5%;
   height:300px;
-  z-index:-3;
-}
-
-.contact_info_section{
-  color: #00103d;
-padding-top: 3rem;
-line-height: 1.6;
-
 }
 
 .quotebutton{
   margin-left:10% !important;
 }
-.cw{
-  color:white !important;
-}
-.showboxcontact{
-  position: relative;
-  margin-top: 10%;
-  width:100%;
-  padding-bottom:20%;
-}
+
 .blueboxcontact2{
-  position:  absolute;
   top:0%;
   right:0%;
   height:300px;
-  width:20%;
-  background:#0069a4;
-  z-index:3;
 }
-.lb{
-  background:#005793;
-  right:20%;
-}
-.supportbox{
-  background:#c71667;
 
-  position: absolute;
-  z-index:5;
+
+.supportbox{
   right:5%;
-  width:80%;
   height:400px;
   top:15%;
 }
-.showimg{
-  z-index:4;
-     00
-  height:100%;
 
-}
 .titleshow{
-  color:white;
-  font-family: "Akrobat";
-  font-size:60px;
-  text-align: center;
-  position: absolute;
   top:10%;
-  z-index:9;
 }
+
 .titleshow2{
-  color:white;
-  font-family: "Akrobat";
-  font-size:20px;
-  text-align: center;
-  position: absolute;
   top:35%;
-  z-index:9;
 }
 
 .quotebutton{
-  padding:1%;
-  background:black;
-  color:white;
-  text-align:  center;
-  font-size:30px;
-  font-family: "Akrobat";
-  position: absolute;
   top:60%;
-  width:30%;
-  outline:none;
-  padding-top:0% !important;
-  box-shadow:1px 1px 1px 1px black;
   right:0%;
 }
+
 .quotebutton:hover{
   background:white;
   color:black;
-  border-color:white;
-  box-shadow:1px 1px 1px 1px white;
-outline:none;
   font-weight: bold;
 }
-.contact_info{
-  line-height: 1.75;
-  padding-left:10%;
-    font-weight: normal;
-    font-size:35px;
-    margin: 1.4em 0;
-    font-weight: normal;
-    font-family: "Akrobat";
-    display: block;
-}
-
-
-
 
 .dropdown_container {
   visibility: collapse;
   opacity:0;
   height:0px;
   animation: .5s ease-in coll 1;
-  padding-bottom:5%;
 }
+
 .dropdown_container p{
   font-family: "Akrobat";
   font-weight: normal;
   font-size: 20px;
-
-
 }
 
-a {
-color: black;
-text-decoration: none;
-cursor: auto;
-}
 .active-dropdown {
   visibility: visible !important;
   opacity:1 !important;
   animation: .5s ease-in dropdown 1;
   height:350px;
-
 }
+
 .active-dropdown p{
   visibility: visible;
   color:white;
   animation: text_appear .5s ease-in 1;
-
 }
+
 .active-dropdown .dropdown_container{
   opacity:1 !important;
   visibility: visible;
   animation: .5s ease-in dropdown 1;
 }
 
-@keyframes text_appear{
-  0%{
-
-    opacity:0% !important;
-    color:#014884;
-    }
-    90%{
-      opacity:0% !important;
-    }
-  100%{
-
-      opacity:100%;
-        color:white;
-  }
-}
-@keyframes coll{
-  0%{
-      height:350px;
-    opacity:100%;
-    color:white;
-    }
-    50%{
-      opacity:50%
-    }
-  100%{
-        height:0px;
-      opacity:0%;
-        color:#014884;
-  }
-}
-
-@keyframes dropdown{
-  0%{
-    height:0px;
-      color:#014884;
-    opacity:0%;
-  }
-
-  100%{
-    opacity:100%;
-    height:350px;
-      color:white;
-  }
-}
-
-.quote_btn{
-  background:black;
-  border-color:black;
-}
-
-.bigger-text-container{
-  width:175% !important;
-}
-
-.showimg{
-  margin-top:30%;
-  width:100%;
-  height:100%;
-}
 
 @media screen and (max-width:944px){
 
@@ -401,18 +177,18 @@ cursor: auto;
   .intro-form-container{
     margin-left:-5% !important;
   }
+
   .name_container{
     width:100% !important;
     max-width:100% !important;
+    flex: 0 0 100%;
   }
 
   .intro-row{
     width:100% !important;
   }
 
-
   .value_row{
-    margin-left:5% !important;
     margin-top:10% !important;
   }
 
@@ -426,7 +202,6 @@ cursor: auto;
   .video-container video {
     height:600px !important;
   }
-
 
   .wave:before{
     content: "";
@@ -454,19 +229,19 @@ cursor: auto;
     height:200px !important;
   }
   .our_work_grid {
-    background:white !important;
+      background:white !important;
       position:absolute !important;
       top:0%;
       z-index:999;
       display:inline;
       margin-top:20%;
       padding:0%;
-      padding-bottom:15%;
+      padding-bottom:40%;
   }
   .work_grid_item{
     float:left !important;
-    max-width:40%;
-    width:40%;
+    max-width:100%;
+    width:100%;
     margin-left:5%;
   }
   .supportbox{
@@ -532,23 +307,15 @@ cursor: auto;
     margin-left:2.5%;
   }
   .our_work_title{
-    color: white;
-    background: #00103d;
-    text-align: center;
     padding-right: 5%;
     width: 70%;
-    /* padding-left: 45%; */
-    /* margin-right: 45%; */
-    /* float: right; */
     margin-right: 35%;
     margin-top: -70%;
-    font-family: "Akrobat";
     padding: 2%;
     padding-left: 2.5%;
-    font-weight: bold;
     font-size: 30px;
     position: relative;
-    z-index: 10000;
+    z-index:999;
   }
 
   .big_blue_box_about_2{
@@ -580,4 +347,11 @@ cursor: auto;
   .our_clients_title{
     margin-top: -70% !important;
   }
+
+
+  .about_us{
+    margin-top:120% !important;
+  }
+
+
 }
