--- a/views/layout/about.ejs
+++ b/views/layout/about.ejs
@@ -11,7 +11,7 @@
               <img src ="./assets/dropdown_arrow.png" _id=1 class="dropdown_arrow half-middle"/>
             </div>
           </div>
-          <div class="dropdown_container margin-top-2_5">
+          <div class="dropdown_container margin-top-2_5 padding-bottom-5">
               <div className="divder_dropdown"></div>
               <p class="dropdown_text">
                   We value meeting and creating relationships with small business owners across the state and enjoy providing something of value to the community that has shaped our lives so much.
@@ -28,7 +28,7 @@
                 <img src ="./assets/dropdown_arrow.png" _id=2 class="dropdown_arrow half-middle"/>
               </div>
             </div>
-            <div class="dropdown_container margin-top-2_5">
+            <div class="dropdown_container margin-top-2_5 padding-bottom-5">
                 <div className="divder_dropdown margin-top-2_5"></div>
                 <p class="dropdown_text">
                     We value honesty and integrity in our employees and ourselves that is why we strive to deliver the highest quality services to businesses who value integrity as well.
@@ -46,7 +46,7 @@
                 <img src ="./assets/dropdown_arrow.png" _id=3 class="dropdown_arrow half-middle"/>
               </div>
             </div>
-            <div class="dropdown_container margin-top-2_5">
+            <div class="dropdown_container margin-top-2_5 padding-bottom-5">
                 <div className="divder_dropdown"></div>
                 <p class="dropdown_text">
                     You can be sure if we make a mistake or fall short for some reason that we will do our best to resolve it and take responsibility instead of passing on to another.
@@ -64,7 +64,7 @@
               </div>
             </div>
 
-            <div class="dropdown_container margin-top-2_5">
+            <div class="dropdown_container margin-top-2_5 padding-bottom-5">
                 <div className="divder_dropdown"></div>
                 <p class="dropdown_text">
                   We truly believe that a good attitude is essential part of having hard working employees and also cultivating long lasting relationships with our clients.
