--- a/views/layout/contact/head.ejs
+++ b/views/layout/contact/head.ejs
@@ -12,11 +12,15 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/home.css" />
      <link rel="stylesheet" type="text/css" href="./assets/css/util.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/cfs_modal.css" />
+      <link rel="stylesheet" type="text/css" href="./assets/css/navbar.css" />
+
          <link rel="stylesheet" type="text/css" href="./assets/css/quote.css" />
            <link rel="stylesheet" type="text/css" href="./assets/css/mobile_navbar.css" />
            <link rel="stylesheet" type="text/css" href="./assets/css/contact_us.css" />
            <link rel="stylesheet" type="text/css" href="./assets/css/showcase.css" />
            <link rel="stylesheet" type="text/css" href="./assets/css/general.css" />
+           <link rel="stylesheet" type="text/css" href="./assets/css/animations.css" />
+
      <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/components/header.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
