--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -10,11 +10,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="./assets/css/about.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/home.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/navbar.css" />
+
      <link rel="stylesheet" type="text/css" href="./assets/css/util.css" />
        <link rel="stylesheet" type="text/css" href="./assets/css/cfs_modal.css" />
           <link rel="stylesheet" type="text/css" href="./assets/css/mobile_navbar.css" />
           <link rel="stylesheet" type="text/css" href="./assets/css/showcase.css" />
           <link rel="stylesheet" type="text/css" href="./assets/css/general.css" />
+          <link rel="stylesheet" type="text/css" href="./assets/css/animations.css" />
+
      <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/components/header.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
