--- a/views/layout/showcase.ejs
+++ b/views/layout/showcase.ejs
@@ -1,4 +1,4 @@
-<div class="row relative">
+<!-- <div class="row relative">
 
     <div class="col-4 no-pad intro-container relative">
         <div class="babybluebackg logo_container foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-2_5">
@@ -83,4 +83,4 @@
 <video autoplay loop muted id = "vid"style="height:1200px;">
   <source src = "./assets/showcase.mp4" type="video/mp4">
 </video>
-</div>
+</div> -->
