--- a/views/layout/top_clients.ejs
+++ b/views/layout/top_clients.ejs
@@ -1,11 +1,11 @@
 <div id="our_clients">
   <p class="text-banner our_work_title font-50 margin-top-10 float-right margin-right-5 padding-right-5 text-center width-25 mobile-width-60 mobile-float-left our_clients_title mobile-font-35">Our Top Clients </p>
-<div class="our_work_grid">
-  <img src = "./assets/bkb.png" class="work_grid_item_left work_grid_item"/>
-  <img src = "./assets/f45.png" class="work_grid_item_center work_grid_item"/>
-  <img src = "./assets/first.png" class="work_grid_item_right work_grid_item"/>
-  <img src = "./assets/sims.png" class="work_grid_item_righter work_grid_item"/>
-  <img src = "./assets/pj.png" class="work_grid_item_rightest work_grid_item"/>
+<div class="our_work_grid grid padding-2_5">
+  <img src = "./assets/bkb.png" class="work_grid_item_left work_grid_item width-100"/>
+  <img src = "./assets/f45.png" class="work_grid_item_center work_grid_item width-100"/>
+  <img src = "./assets/first.png" class="work_grid_item_right work_grid_item width-100"/>
+  <img src = "./assets/sims.png" class="work_grid_item_righter work_grid_item width-100"/>
+  <img src = "./assets/pj.png" class="work_grid_item_rightest work_grid_item width-100"/>
 
 </div>
 </div>
