--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -22,15 +22,15 @@
     <p class="text-banner width-40 mobile-width-90  mobile-margin-left-5 mobile-text-center stylized-black text-left margin-left-2 mobile-font-30">Our Values</p>
 
       <%- include("./../layout/about.ejs")  %>
-      <div class="our_work_section background-white relative">
+      <div class="our_work_section background-white relative mobile-margin-top-35">
           <div class="wavy_section width-100">
               <div class = "wave relative width-100 background-006 max-z"></div>
         </div>
       <%- include("./../layout/top_clients.ejs") %>
     </div>
 
-    <div class="contact_section padding-5 relative padding-5 height-300 width-100">
-        <p class="about-us-title text-banner font-60 width-45 padding-1 stylized-black margin-bottom-5 white padding-left-2_5 contact_us_title mobile-font-35 mobile-width-100 mobile-text-center "> Contact Us Today!</p>
+    <div class="contact_section padding-5 relative padding-5 height-300 width-100 mobile-margin-top-30">
+        <p class="about-us-title text-banner font-60 width-45 padding-1 stylized-black margin-bottom-5 white padding-left-2_5 contact_us_title mobile-font-35 mobile-width-100 mobile-text-center mobile-margin-top-20 "> Contact Us Today!</p>
         <div class="blueboxcontact negative-z background-005 width-30 absolute"></div>
     </div>
     <div class="contact_info_section padding-top-3-rem color-01 line-height-1_5 white-background width-100 background-white relative width-100">
