--- a/views/layout/top_clients.ejs
+++ b/views/layout/top_clients.ejs
@@ -1,6 +1,6 @@
 <div id="our_clients">
 
-  <p class="text-banner mobile-max-z our_work_title font-50 margin-top-10 float-right margin-right-5 padding-right-5 text-center width-25 mobile-width-60 mobile-float-left our_clients_title mobile-font-35 mobile-width-70 mobile-relative mobile-max-z mobile-margin-right-35 mobile-padding-left-2_5">Our Top Clients </p>
+  <p class="text-banner mobile-infinite-z our_work_title font-50 margin-top-10 float-right margin-right-5 padding-right-5 text-center width-25 mobile-width-60 mobile-float-left our_clients_title mobile-font-35 mobile-width-70 mobile-relative mobile-max-z mobile-margin-right-35 mobile-padding-left-2_5">Our Top Clients </p>
 
   <div class="our_work_grid grid mobile-padding-bottom-40 padding-2_5 mobile-margin-top-10 mobile-padding-10 mobile-absolute max-z white-background">
     <img src = "./assets/bkb.png" class="work_grid_item_left work_grid_item width-100"/>
