--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -1,8 +1,8 @@
 
-    <div class="showboxcontact relative margin-top-10 width-100 padding-bottom-20">
+    <div class="showboxcontact relative margin-top-10 width-100">
         <div class="blueboxcontact2 absolute background-006 width-20 z-3"></div>
         <div class="blueboxcontact2 right-20 background-005"></div>
-        <div class="supportbox absolute width-80 z-5 background-c7">
+        <div class="supportbox absolute width-80 z-5 background-c7 mobile-margin-right-10">
             <img class="showimg height-100 width-100 margin-top-30 z-4 mobile-margin-top-70" src = "./assets/show.png"/>
             <p class="titleshow text-center width-100 white akrobat font-60 text-center absolute z-9 mobile-font-30">Get Quoted Today!</p>
             <p class="titleshow2 text-center width-100 white akrobat font-20 text-center absolute z-9 mobile-font-20">We will reach back as fast as possible!</p>
